# Cpp2Python

./: CMakeLists.txt  README.md  README_EN.md
sdk/include/: CrpRobot.h
src/: CrpRobot.cpp  bindings.cpp
